--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,7 @@
 [submodule "JUCE"]
 	path = JUCE
 	url = https://github.com/juce-framework/JUCE.git
+[submodule "libs/IADSP"]
+	path = libs/IADSP
+	url = https://github.com/IcebreakerAudio/IADSP.git
+	branch = main
